# web_services_course

./: .gitignore  HW4.md  README.md  WatermarkService.py  client.py  pyproject.toml  server.py  setup.cfg
app/: contracts.py  main.py  routers.py
protos/: services.proto
protos/builds/: services_pb2.py  services_pb2_grpc.py
